# hpc2torch

./: .gitignore  CMakeLists.txt  Makefile  README.md  bindings.cpp  run.sh  setup.py
attention/: attention.cu  run.sh  setup.py  test_attention.py
include/: common_cpu.cpp  common_cpu.h
softmax/: run.sh  setup.py  softmax.cu  test_softmax.py
square/: sq.py
square/load_inline_cuda/: .ninja_deps  .ninja_log
src/attention/: attention.cu
src/attention/gpu/: attention_cuda.cu
src/batchnorm/mlu/: batchnorm_bang.mlu  batchnorm_cnnl.cpp
src/convolution/mlu/: convolution_cnnl.cpp
src/expand/mlu/: expand_cnnl.cpp
src/gather/gpu/: gather_cuda.cu
src/layernorm/cpu/: layernorm.cpp
src/layernorm/cuda/: layernorm.cu
src/layernorm/gpu/: layernorm_cuda.cu
src/layernorm/mlu/: layernorm.cpp  layernorm.mlu  layernorm_cnnl.cpp
src/matmul/gpu/: matmul_cuda.cu  matmul_cudnn.cpp
src/rotary_embedding/mlu/: rotary_embedding_bang.mlu  rotary_embedding_cnnl.cpp
src/softmax/cpu/: softmax.cpp
src/softmax/cuda/: softmax.cu
src/softmax/gpu/: softmax_cudnn.cpp
src/softmax/mlu/: softmax.mlu  softmax_cnnl.cpp
test/: attention.py  batchnorm.py  convolution.py  expand.py  gather.py  layernorm.py  matmul.py  performance.py  rotary_embedding.py  softmax.py  test_attention.py  test_softmax.py
